Fixes blurry images on safari.

--- a/src/components/transform-component/transform-component.module.css
+++ b/src/components/transform-component/transform-component.module.css
@@ -13,6 +13,7 @@
   user-select: none;
   margin: 0;
   padding: 0;
+  transform: translate3d(0, 0, 0);
 }
 .content {
   display: flex;
